<?xml version="1.0"?>
<package format="2">
  <name>cslibs_time</name>
  <version>0.0.2</version>
  <description>
    The cslibs_time package contains a ros compatible high precision timing library
    which employs std::chrono.
  </description>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
